--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "express": "^4.14.0",
+    "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "validator": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
