--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.2",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.2",
+    "mongoose": "^4.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "shortid": "^2.2.6",
+    "toastr": "^2.1.2",
     "validator": "^6.1.0"
   },
   "devDependencies": {
