--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.2",
     "mongoose": "^4.7.0",
     "react": "^15.4.1",
