--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
+    "jwt-decode": "^2.1.0",
     "lodash": "^4.17.2",
     "mongoose": "^4.7.0",
     "react": "^15.4.1",
