--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon --watch server --exec babel-node -- server/index.js"
+    "start": "nodemon --watch src --exec babel-node -- src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,32 +15,18 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "classnames": "^2.2.5",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
-    "jwt-decode": "^2.1.0",
     "lodash": "^4.17.2",
     "mongoose": "^4.7.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
     "shortid": "^2.2.6",
     "toastr": "^2.1.2",
     "validator": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "nodemon": "^1.11.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "webpack": "^1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.2"
+    "nodemon": "^1.11.0"
   }
 }
