--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.1.1",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.17.2",
+    "moment": "^2.17.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
