--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.2",
+    "mime": "^1.3.4",
     "mongoose": "^4.7.0",
+    "multer": "^1.2.0",
     "shortid": "^2.2.6",
     "toastr": "^2.1.2",
     "validator": "^6.1.0"
