--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
+    "react-redux-modal": "^0.5.2",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
